src/z80asm/z80asm2/t/40-syntax/expected/org_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/org_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/org_01.asm...
t/40-syntax/input/org_01.asm:1:4: error: Expression expected
    org
       ^
t/40-syntax/input/org_01.asm:2:7: error: Unexpected token: ","
    org 10,
          ^
Program: org_01
    Modules:
        Module: org_01 (current)
            Sections:
                Section: "" (current)
                    Size: 0
    Statements:
        OrgStmt
            Location: t/40-syntax/input/org_01.asm:3:1
            Address: 0
            Expression:
                ExprBinary: +
                    Location: t/40-syntax/input/org_01.asm:3:7
                    Value type: Unknown
                    Expr: 1+2*3
                    LHS:
                        ExprLiteralInt: 1
                            Location: t/40-syntax/input/org_01.asm:3:5
                            Value type: Unknown
                    RHS:
                        ExprBinary: *
                            Location: t/40-syntax/input/org_01.asm:3:9
                            Value type: Unknown
                            LHS:
                                ExprLiteralInt: 2
                                    Location: t/40-syntax/input/org_01.asm:3:7
                                    Value type: Unknown
                            RHS:
                                ExprLiteralInt: 3
                                    Location: t/40-syntax/input/org_01.asm:3:9
                                    Value type: Unknown
            Padding size: 0
